fixed rec card info spacing

--- a/client/styles.css
+++ b/client/styles.css
@@ -90,7 +90,7 @@ section > div {
 }
 
 #song-rec-sect {
-  width: 200px;
+  width: 500px;
   border: 2px solid orange;
 }
 
